# rust-backend-api-first-lesson

./: .dockerignore  .env.example  .env.test  .gitignore  CLAUDE-GUIDELINES-CRATE-SPLITTING.md  CLAUDE-GUIDELINES.md  CLAUDE-PHASES.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  a.md  docker-compose.yml  rust-toolchain.toml  マルチテナント機能要件定義.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250511_073638_create_task_table.rs  m20250512_000001_add_task_indexes.rs  m20250612_000001_create_users_table.rs  m20250612_000002_create_refresh_tokens_table.rs  m20250612_000003_create_password_reset_tokens_table.rs  m20250612_000004_add_user_id_to_tasks.rs  m20250613_000001_create_roles_table.rs  m20250613_000002_add_role_id_to_users.rs  m20250613_000003_create_initial_admin.rs  m20250616_000001_add_subscription_tier_to_users.rs  m20250616_000002_create_subscription_histories_table.rs  m20250616_000002_create_subscription_history_table.rs  m20250616_000003_create_teams_table.rs  m20250616_000004_create_organizations_table.rs  m20250616_000005_create_team_members_table.rs  m20250616_000006_create_organization_members_table.rs  m20250621_140000_create_email_verification_tokens_table.rs  m20250624_000001_create_organization_departments_table.rs  m20250624_000002_create_permission_matrices_table.rs  m20250624_000003_create_organization_analytics_table.rs  m20250624_000004_create_department_members_table.rs  m20250625_000001_create_team_invitations_table.rs  m20250630_000001_create_activity_logs_table.rs  m20250630_000002_create_security_incidents_table.rs  m20250630_000003_create_login_attempts_table.rs  m20250702_000001_create_feature_usage_metrics_table.rs  m20250702_000002_create_daily_activity_summaries_table.rs  m20250702_000003_create_user_settings_table.rs  m20250702_000004_create_bulk_operation_histories_table.rs  m20250702_100001_add_performance_indexes.rs  m20250702_113002_create_user_consents_table.rs  m20250703_013738_fix_teams_owner_cascade.rs  m20250703_150000_create_task_attachments_table.rs  m20250704_180000_create_attachment_share_links.rs  m20250704_180001_create_share_link_access_logs.rs  m20250704_180002_add_stripe_support.rs  m20250706_000001_add_priority_completion_to_tasks.rs  m20250706_000002_add_ip_tracking_to_password_reset.rs  m20250706_000003_add_session_analytics_to_refresh_tokens.rs  (+9 more)
task-backend/: .dockerignore  .env  .env.example  Cargo.toml  DEVELOPMENT.md  Dockerfile  ENDPOINT.md  EXTENSION.md  MIGRATION.md  Makefile  README.md  UPDATE_LIBRARIES.md  docker-compose.yml  rust-toolchain.toml
task-backend/docs/: AUTH_ENDPOINT.md  BUILD_METRICS_REPORT.md  BUILD_OPTIMIZE.md  CICD.md  DEPENDENCY_MANAGEMENT.md  DEPLOY.md  DEVELOPMENT.md  EMAIL_PROVIDERS.md  EMAIL_SEND.md  ENV_FILE.md  FEATURE_DESIGN.md  FILE_UPLOAD.md  FORMAT_LINTER.md  HANDSON.md  INDEX_PERFORMANCE_REPORT.md  INSTALL_LIBRARIES.md  METRICS.md  MIGRATION.md  MULTITENANT_FEATURE_GUIDE.md  MULTITENANT_PERMISSION_BEST_PRACTICES.md  PLANNING.md  POSTMORTEM.md  PROTECTED_ENDPOINT.md  PUBLIC_ENDPOINT.md  REFACTORING.md  SCENARIO.md  STORAGE_PROVIDERS.md  SUBSCRIPTION.md  TESTING.md  TODO.md  UNIFIED_PERMISSION_MIDDLEWARE_GUIDE.md  USE_GHCR_IMAGE.md  WORKSPACE_GUIDE.md
task-backend/docs/best-practices/: README.md  circular-deps.md  error-handling.md  pagination.md  permission-management.md  subscription-management.md  testing-strategy.md
task-backend/docs/endpoints/: README.md  admin.md  analytics.md  authentication.md  file_upload.md  gdpr_compliance.md  organization_hierarchy.md  organization_management.md  permission_management.md  public.md  role_management.md  security.md  subscription_management.md  task_management.md  team_management.md  user_management.md
task-backend/docs/refactorings/: 01-CLAUDE.md
task-backend/docs/stripe/: 01_SETUP.md  02_DEVELOPMENT.md  03_WEBHOOK.md  04_IMPLEMENTATION.md  05_PRODUCTION.md  README.md
task-backend/migration/: Cargo.toml
task-backend/migration/src/: lib.rs  m20250511_073638_create_task_table.rs  m20250512_000001_add_task_indexes.rs  main.rs
task-backend/src/: config.rs  db.rs  error.rs  lib.rs  main.rs
task-backend/src/api/: mod.rs
task-backend/src/config/: app.rs  mod.rs  stripe.rs
task-backend/src/core/: mod.rs  permission.rs  subscription_tier.rs  task_status.rs
task-backend/src/domain/: activity_log_model.rs  attachment_share_link_model.rs  audit_log_model.rs  bulk_operation_history_model.rs  department_member_model.rs  email_verification_token_model.rs  feature_usage_metrics_model.rs  login_attempt_model.rs  mod.rs  organization_analytics_model.rs  organization_department_model.rs  organization_model.rs  password_reset_token_model.rs  permission.rs  permission_matrix_model.rs  refresh_token_model.rs  role_model.rs  security_incident_model.rs  share_link_access_log_model.rs  stripe_payment_history_model.rs  stripe_subscription_model.rs  subscription_history_model.rs  subscription_tier.rs  task_attachment_model.rs  task_model.rs  task_status.rs  task_visibility.rs  team_invitation_model.rs  team_member_model.rs  team_model.rs  user_consent_model.rs  user_model.rs  user_settings_model.rs
task-backend/src/extractors/: mod.rs  uuid.rs
task-backend/src/features/: mod.rs
task-backend/src/infrastructure/: mod.rs
task-backend/src/logging/: mod.rs
task-backend/src/middleware/: activity_logger.rs  auth.rs  authorization.rs  hierarchical_permission.rs  mod.rs  rate_limit.rs  subscription_guard.rs
task-backend/src/repository/: activity_log_repository.rs  attachment_repository.rs  attachment_share_link_repository.rs  audit_log_repository.rs  bulk_operation_history_repository.rs  daily_activity_summary_repository.rs  department_member_repository.rs  email_verification_token_repository.rs  feature_usage_metrics_repository.rs  login_attempt_repository.rs  mod.rs  organization_analytics_repository.rs  organization_department_repository.rs  organization_repository.rs  password_reset_token_repository.rs  permission_matrix_repository.rs  refresh_token_repository.rs  (+10 more)
task-backend/tests/: logging_test.rs  main.rs  mod.rs
(+561 files in other folders)
