[workspace]
members = ["task-backend", "migration"]
default-members = ["task-backend"]
resolver = "2"

# Workspace-wide package information
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Higashi Kota <higashi.kota@gri.jp>"]
license = "MIT"
repository = "https://github.com/Higashi-Kota/rust-backend-api-first-lesson"
homepage = "https://github.com/Higashi-Kota/rust-backend-api-first-lesson"
description = "Task management backend API with Rust, Axum, and PostgreSQL"
keywords = ["rust", "axum", "api", "postgres", "task-management"]
categories = ["web-programming", "database"]

# Workspace-wide dependencies that can be inherited by members
[workspace.dependencies]
# Web framework and async runtime
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
hyper = "1.2"

# Database and ORM
sea-orm = { version = "1.1.12", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "macros",
] }
# PostgreSQLサポートのfeatureを追加
sea-orm-migration = { version = "1.1.12", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

# Error handling
thiserror = "2.0"

# Configuration and environment
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async standard library (for migration)
async-std = { version = "1", features = ["attributes", "tokio1"] }

# Development and testing dependencies
reqwest = { version = "0.12", features = ["json", "multipart"] }
testcontainers = { version = "0.24.0", features = ["blocking"] }
testcontainers-modules = { version = "0.12.0", default-features = false, features = [
  "postgres",
] }
once_cell = "1"

# JWT and Authentication dependencies
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
validator = { version = "0.18", features = ["derive"] }

# Email sending
lettre = { version = "0.11", default-features = false, features = [
  "tokio1-rustls-tls",
  "smtp-transport",
  "builder",
] }

# Additional security and utilities
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
time = { version = "0.3", features = ["macros", "serde"] }

# Rate limiting and security
tower-http = { version = "0.5", features = [
  "cors",
  "trace",
  "timeout",
  "limit",
] }
axum-extra = { version = "0.10", features = ["cookie"] }

# Pattern matching and lazy statics
regex = "1.10"

# File upload and storage
aws-config = "1.5"
aws-sdk-s3 = "1.57"
mime = "0.3"

# Image processing
image = { version = "0.25", features = ["webp", "jpeg", "png", "gif"] }
webp = "0.3"

# Payment processing
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper", "webhook-events", "checkout", "billing"] }

# Workspace-wide lints and settings
[workspace.lints.rust]
# unsafe_code = "forbid"
# missing_docs = "warn"

[workspace.lints.clippy]
# # Performance lints
# large_enum_variant = "warn"
# large_stack_arrays = "warn"
# large_types_passed_by_value = "warn"

# # Style lints
# enum_glob_use = "warn"
# missing_errors_doc = "warn"
# missing_panics_doc = "warn"
# needless_pass_by_value = "warn"
# redundant_clone = "warn"
# semicolon_if_nothing_returned = "warn"
# unreadable_literal = "warn"
# unused_self = "warn"

# Correctness lints
cloned_instead_of_copied = "warn"
inefficient_to_string = "warn"
map_unwrap_or = "warn"

[profile.dev]
# Faster compilation for development
debug = 1
opt-level = 0
incremental = true

[profile.test]
# Faster test compilation
opt-level = 0
debug = 1
incremental = true

[profile.ci]
# CI専用プロファイル - ビルド時間とパフォーマンスのバランス
inherits = "release"
lto = "thin"
codegen-units = 16

[profile.release]
# Optimize for size and performance in release builds
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
