[package]
name = "task-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

# ライブラリとしても使用できるように設定
[lib]
name = "task_backend"
path = "src/lib.rs"

[dependencies]
# Migration dependency - path updated for workspace structure
migration = { path = "../migration" }

# Web framework and async runtime - using workspace dependencies
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Database and ORM - using workspace dependencies
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Serialization - using workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities - using workspace dependencies
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# Error handling - using workspace dependencies
thiserror = { workspace = true }

# Configuration and environment - using workspace dependencies
dotenvy = { workspace = true }

# Logging and tracing - using workspace dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Development and testing dependencies - using workspace dependencies
reqwest = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
once_cell = { workspace = true }

# Inherit workspace lints
[lints]
workspace = true