[package]
name = "task-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

# ライブラリとしても使用できるように設定
[lib]
name = "task_backend"
path = "src/lib.rs"

# バイナリターゲット
[[bin]]
name = "task-backend"
path = "src/main.rs"

[[bin]]
name = "generate-password-hash"
path = "src/bin/generate_password_hash.rs"

[dependencies]
# Migration dependency - path updated for workspace structure
migration = { path = "../migration" }

# Web framework and async runtime - using workspace dependencies
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database and ORM - using workspace dependencies
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Serialization - using workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities - using workspace dependencies
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

# Error handling - using workspace dependencies
thiserror = { workspace = true }

# Configuration and environment - using workspace dependencies
dotenvy = { workspace = true }

# Logging and tracing - using workspace dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# JWT and Authentication - using workspace dependencies
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
validator = { workspace = true }

# Email sending - using workspace dependencies
lettre = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }

# Enhanced Axum features - using workspace dependencies
axum-extra = { workspace = true }

# Pattern matching and lazy statics - using workspace dependencies
regex = { workspace = true }
once_cell = { workspace = true }

# File upload and storage - using workspace dependencies
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
mime = { workspace = true }

# Image processing - using workspace dependencies
image = { workspace = true }
webp = { workspace = true }

# Payment processing - using workspace dependencies
async-stripe = { workspace = true }

[dev-dependencies]
# Development and testing dependencies - using workspace dependencies
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

# Inherit workspace lints
[lints]
workspace = true
